--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,20 @@
-<button mat-raised-button> Hello World </button>
-<div class="mat-display-4">This is display 4</div>
-<div class="mat-display-3">This is display 3</div>
-<div class="mat-display-2">This is display 2</div>
-<div class="mat-display-1">This is display 1</div>
-
-<div class="mat-headline">This is a heading for h1</div>
-<div class="mat-title">This is a heading for h2</div>
-<div class="mat-subheading-2">This is a heading for h3</div>
-<div class="mat-subheading-1">This is a heading for h4</div>
-
-<div class="mat-body-1">This is body text</div>
-<div class="mat-body-2">This is bold body text</div>
-<div class="mat-caption">This is caption text</div>
-
-<div class="mat-typography">
-  <h1>This is a heading for h1</h1>
-  <h2>This is a heading for h2</h2>
-  <h3>This is a heading for h3</h3>
-  <h4>This is a heading for h4</h4>
+<div>
+  <button mat-button>Click me</button>
+  <button mat-raised-button>Click me</button>
+  <button mat-flat-button>Click me</button>
+  <button mat-stroked-button>Click me</button>
+</div>
+<div>
+  <button mat-icon-button>Icon</button>
+  <button mat-fab>Fab Icon</button>
+  <button mat-mini-fab>Minifab icon</button>
 </div>
 
+<div>
+  <button color="primary" mat-button>Primary</button>
+  <button color="accent" mat-button>Accent</button>
+  <button color="warn" disableRipple mat-button>Warn -ripple</button>
+  <button color="primary" mat-raised-button>Primary</button>
+  <button color="accent" mat-raised-button>Accent</button>
+  <button color="warn" mat-raised-button>Warn</button>
+</div>
