--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,22 @@
 <div>
-  <button mat-button>Click me</button>
-  <button mat-raised-button>Click me</button>
-  <button mat-flat-button>Click me</button>
-  <button mat-stroked-button>Click me</button>
+  <mat-button-toggle #toggleBtn checked disableRipple> Toggle </mat-button-toggle>
+  {{toggleBtn.checked}}
 </div>
 <div>
-  <button mat-icon-button>Icon</button>
-  <button mat-fab>Fab Icon</button>
-  <button mat-mini-fab>Minifab icon</button>
+    <mat-button-toggle-group #toggleGroup="matButtonToggleGroup" >
+        <mat-button-toggle value="angular">Angular</mat-button-toggle>
+        <mat-button-toggle value="react">React</mat-button-toggle>
+        <mat-button-toggle value="vue">Vue</mat-button-toggle>
+    </mat-button-toggle-group>
+    {{ toggleGroup.value }}
+</div>
+<div>
+    <mat-button-toggle-group #toggleGroup2="matButtonToggleGroup" multiple>
+        <mat-button-toggle value="angular">Angular</mat-button-toggle>
+        <mat-button-toggle value="react">React</mat-button-toggle>
+        <mat-button-toggle value="vue">Vue</mat-button-toggle>
+    </mat-button-toggle-group>
+    {{ toggleGroup2.value }}
 </div>
 
-<div>
-  <button color="primary" mat-button>Primary</button>
-  <button color="accent" mat-button>Accent</button>
-  <button color="warn" disableRipple mat-button>Warn -ripple</button>
-  <button color="primary" mat-raised-button>Primary</button>
-  <button color="accent" mat-raised-button>Accent</button>
-  <button color="warn" mat-raised-button>Warn</button>
-</div>
+
