--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,5 @@
 <div>
-  <mat-button-toggle #toggleBtn checked disableRipple> Toggle </mat-button-toggle>
-  {{toggleBtn.checked}}
-</div>
-<div>
-    <mat-button-toggle-group #toggleGroup="matButtonToggleGroup" >
-        <mat-button-toggle value="angular">Angular</mat-button-toggle>
-        <mat-button-toggle value="react">React</mat-button-toggle>
-        <mat-button-toggle value="vue">Vue</mat-button-toggle>
-    </mat-button-toggle-group>
-    {{ toggleGroup.value }}
-</div>
-<div>
-    <mat-button-toggle-group #toggleGroup2="matButtonToggleGroup" multiple>
-        <mat-button-toggle value="angular">Angular</mat-button-toggle>
-        <mat-button-toggle value="react">React</mat-button-toggle>
-        <mat-button-toggle value="vue">Vue</mat-button-toggle>
-    </mat-button-toggle-group>
-    {{ toggleGroup2.value }}
+    <mat-icon color="primary">grade</mat-icon>
 </div>
 
 
