--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,3 @@
-<br>
-<div>
-    <span [matBadge]="notifications" [matBadgeHidden]="notifications ===0"> Notifications </span>
-</div>
-<div>
-    <span matBadge="5" matBadgePosition="below before"> Notifications </span>
-</div>
-<div>
-    <span matBadge="5" matBadgePosition="below after"> Notifications </span>
-</div>
-<div>
-    <span matBadge="5" matBadgePosition="above before"> Notifications </span>
-</div>
-
-<div>
-    <span matBadge="5" matBadgeSize="small"> Notifications </span>
-</div>
-<div>
-    <span matBadge="5" matBadgeSize="medium"> Notifications </span>
-</div>
-<div>
-    <span matBadge="5" matBadgeSize="large"> Notifications </span>
-</div>
-
-<div>
-    <span matBadge="5" matBadgeColor="primary"> Notifications </span>
-</div>
-<div>
-    <span matBadge="5" matBadgeColor="accent"> Notifications </span>
-</div>
-<div>
-    <span matBadge="5" matBadgeColor="warn" matBadgeOverlap="false"> Notifications </span>
-</div>
+<!-- <mat-progress-spinner value="50"></mat-progress-spinner> -->
+<mat-spinner *ngIf="showSpinner" color="warn"></mat-spinner>
+<button (click)="loadData()">Load data</button>
