--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<!-- <mat-progress-spinner value="50"></mat-progress-spinner> -->
-<mat-spinner *ngIf="showSpinner" color="warn"></mat-spinner>
-<button (click)="loadData()">Load data</button>
+<mat-toolbar color="primary" class="navbar">
+    <div>Toolbar</div>
+    <div>
+        <span>Home</span>
+        <span>About</span>
+        <span>Services</span>
+    </div>
+</mat-toolbar>
