--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,36 @@
-<mat-sidenav-container>
-    <!-- mode types: over(default) push side-->
-    <mat-sidenav #sidenav (opened)="log('Opened')" (closed)="log('Closed')"mode="side" [(opened)]="opened">Sidenav</mat-sidenav>
-    <mat-sidenav-content>
-        <button (click)="opened = !opened">Toggle Sidebar</button>
-        <button (click)="sidenav.open()">Open</button>
-        <button (click)="sidenav.close()">Close</button>
-        <button (click)="sidenav.toggle()">Toggle</button>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+<mat-menu #appMenu="matMenu" xPosition="after" yPosition="above">
+    <button mat-menu-item [matMenuTriggerFor]="subMenu">Frontend</button>
+    <button mat-menu-item>Backend</button>
+</mat-menu>
+
+<button class="center" mat-flat-button [matMenuTriggerFor]="appMenu">Menu</button>
+
+<mat-menu #subMenu="matMenu">
+    <button mat-menu-item>Angular</button>
+    <button mat-menu-item>React</button>
+    <button mat-menu-item>Vue</button>
+</mat-menu>
+
+<mat-menu #lazyMenu="matMenu">
+    <ng-template matMenuContent let-name="name" let-hobby="hobby">
+        <button mat-menu-item>Settings</button>
+        <button mat-menu-item> Hobby is {{hobby}}</button>
+        <button mat-menu-item>Log out {{name}}</button>
+    </ng-template>
+</mat-menu>
+<button 
+    mat-raised-button 
+    [matMenuTriggerData]="{name: 'name1', hobby: 'football'}" 
+    [matMenuTriggerFor]="lazyMenu"
+>
+    Name1
+</button>
+<button 
+    mat-raised-button 
+    [matMenuTriggerData]="{name: 'name2', hobby: 'racing'}" 
+    [matMenuTriggerFor]="lazyMenu"
+>
+    Name2
+</button>
+
+
