--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,27 @@
-<mat-menu #appMenu="matMenu" xPosition="after" yPosition="above">
-    <button mat-menu-item [matMenuTriggerFor]="subMenu">Frontend</button>
-    <button mat-menu-item>Backend</button>
-</mat-menu>
-
-<button class="center" mat-flat-button [matMenuTriggerFor]="appMenu">Menu</button>
-
-<mat-menu #subMenu="matMenu">
-    <button mat-menu-item>Angular</button>
-    <button mat-menu-item>React</button>
-    <button mat-menu-item>Vue</button>
-</mat-menu>
-
-<mat-menu #lazyMenu="matMenu">
-    <ng-template matMenuContent let-name="name" let-hobby="hobby">
-        <button mat-menu-item>Settings</button>
-        <button mat-menu-item> Hobby is {{hobby}}</button>
-        <button mat-menu-item>Log out {{name}}</button>
-    </ng-template>
-</mat-menu>
-<button 
-    mat-raised-button 
-    [matMenuTriggerData]="{name: 'name1', hobby: 'football'}" 
-    [matMenuTriggerFor]="lazyMenu"
->
-    Name1
-</button>
-<button 
-    mat-raised-button 
-    [matMenuTriggerData]="{name: 'name2', hobby: 'racing'}" 
-    [matMenuTriggerFor]="lazyMenu"
->
-    Name2
-</button>
+<mat-list>
+    <mat-list-item>
+        <mat-icon matListIcon>home</mat-icon>
+        <h3 matLine>Heading</h3>
+        <p matLine>Line</p>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>
+        <mat-icon matListIcon>folder</mat-icon>
+        <h3 matLine>Heading 2</h3>
+        <p matLine>Line 2</p>
+    </mat-list-item>
+</mat-list>
 
 
+<!--
+<mat-list dense>
+    <mat-list-item>Item 1</mat-list-item>
+    <mat-list-item>Item 2</mat-list-item>
+    <mat-list-item>Item 3</mat-list-item>
+</mat-list>
+<mat-nav-list>
+    <a mat-list-item href="#">Home</a>
+    <a mat-list-item href="##">About</a>
+    <a mat-list-item href="###">Services</a>
+</mat-nav-list>
+-->
