--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,32 @@
-<mat-grid-list cols="2" rowHeight="fit" style="height: 420px" gutterSize="10px">
-    <mat-grid-tile>Tile 1</mat-grid-tile>
-    <mat-grid-tile>Tile 2</mat-grid-tile>
-    <mat-grid-tile>Tile 3</mat-grid-tile>
-    <mat-grid-tile>Tile 4</mat-grid-tile>
-</mat-grid-list>
+<mat-accordion multi="true">
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Angular fundamentals tutorial
+            </mat-panel-title>
+            <mat-panel-description>
+                Total Duration: 3 hours
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+        <p>This is the panel content.</p>
+        <mat-action-row>
+            <button mat-button>Enroll</button>
+        </mat-action-row>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Angular Material tutorial
+            </mat-panel-title>
+            <mat-panel-description>
+                Total Duration: 2 hours
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+        <p>This is the panel content.</p>
+        <mat-action-row>
+            <button mat-button>Enroll</button>
+        </mat-action-row>
+    </mat-expansion-panel>
+</mat-accordion>
+
+
