--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,13 @@
-<mat-accordion multi="true">
-    <mat-expansion-panel>
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Angular fundamentals tutorial
-            </mat-panel-title>
-            <mat-panel-description>
-                Total Duration: 3 hours
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p>This is the panel content.</p>
-        <mat-action-row>
-            <button mat-button>Enroll</button>
-        </mat-action-row>
-    </mat-expansion-panel>
-    <mat-expansion-panel>
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Angular Material tutorial
-            </mat-panel-title>
-            <mat-panel-description>
-                Total Duration: 2 hours
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p>This is the panel content.</p>
-        <mat-action-row>
-            <button mat-button>Enroll</button>
-        </mat-action-row>
-    </mat-expansion-panel>
-</mat-accordion>
+<mat-card> 
+    <mat-card-title>
+        Card title
+    </mat-card-title>
+    <mat-card-content>
+        This is the card content
+    </mat-card-content>
+    <mat-card-actions align="end">
+        <button mat-flat-button>Login</button>
+    </mat-card-actions>
+</mat-card>
 
 
