--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,22 @@
-<mat-tab-group #tabRef (selectedTabChange)="logChange(tabRef.selectedIndex)">
-    <mat-tab label="Angular">Angular content</mat-tab>
-    <mat-tab label="React">React content</mat-tab>
-    <mat-tab label="Vue">Vue content</mat-tab>
-
-</mat-tab-group>
-<br/>
-{{tabRef.selectedIndex}}
+<mat-vertical-stepper linear>
+    <mat-step label="Shipping Address" completed=true>
+        <p>Shipping Address Details</p>
+        <div>
+            <button mat-button matStepperNext>Next</button>
+        </div>
+    </mat-step>
+    <mat-step label="Billing Address" completed=false optional>
+        <p>Billing Address Details</p>
+        <div>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-button matStepperNext>Next</button>
+        </div>
+    </mat-step>
+    <mat-step label="Place Order" completed=false>
+        <p>Order Details</p>
+        <div>
+            <button mat-button matStepperPrevious>Back</button>
+        </div>
+    </mat-step>
+</mat-vertical-stepper>
 
