--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,23 @@
-<mat-vertical-stepper linear>
-    <mat-step label="Shipping Address" completed=true>
-        <p>Shipping Address Details</p>
-        <div>
-            <button mat-button matStepperNext>Next</button>
-        </div>
-    </mat-step>
-    <mat-step label="Billing Address" completed=false optional>
-        <p>Billing Address Details</p>
-        <div>
-            <button mat-button matStepperPrevious>Back</button>
-            <button mat-button matStepperNext>Next</button>
-        </div>
-    </mat-step>
-    <mat-step label="Place Order" completed=false>
-        <p>Order Details</p>
-        <div>
-            <button mat-button matStepperPrevious>Back</button>
-        </div>
-    </mat-step>
-</mat-vertical-stepper>
-
+<mat-form-field floatLabel="auto" hideRequiredMarker appearance="legacy"> 
+    <mat-label>Name</mat-label>
+    <input matInput required>
+    <mat-hint align="end"> Min 5 characters</mat-hint>
+</mat-form-field>
+<br>
+<mat-form-field floatLabel="auto" hideRequiredMarker appearance="standard"> 
+    <mat-label>Name</mat-label>
+    <input matInput required>
+    <mat-hint align="end"> Min 5 characters</mat-hint>
+</mat-form-field>
+<br>
+<mat-form-field floatLabel="auto" hideRequiredMarker appearance="fill" color="accent"> 
+    <mat-label>Name</mat-label>
+    <input matInput required>
+    <mat-hint align="end"> Min 5 characters</mat-hint>
+</mat-form-field>
+<br>
+<mat-form-field floatLabel="auto" hideRequiredMarker appearance="outline" color="warn"> 
+    <mat-label>Name</mat-label>
+    <input matInput required>
+    <mat-hint align="end"> Min 5 characters</mat-hint>
+</mat-form-field>
