--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,18 @@
-<mat-form-field floatLabel="auto" hideRequiredMarker appearance="legacy"> 
-    <mat-label>Name</mat-label>
-    <input matInput required>
-    <mat-hint align="end"> Min 5 characters</mat-hint>
+<mat-form-field class="center"> 
+    <mat-label>Topic</mat-label>
+    <mat-select [(value)]="selectedValue"><!--can be multiple choices with multiple keyword-->
+        <mat-option>None</mat-option>
+        <mat-optgroup label="Web">
+            <mat-option value="angular">Angular</mat-option>
+            <mat-option value="react">React</mat-option>
+            <mat-option value="vue">Vue</mat-option>
+        </mat-optgroup>
+        <mat-optgroup label="Mobile">
+            <mat-option value="ionic">Ionic</mat-option>
+            <mat-option value="reactnative">React Native</mat-option>
+        </mat-optgroup>
+    </mat-select>
 </mat-form-field>
-<br>
-<mat-form-field floatLabel="auto" hideRequiredMarker appearance="standard"> 
-    <mat-label>Name</mat-label>
-    <input matInput required>
-    <mat-hint align="end"> Min 5 characters</mat-hint>
-</mat-form-field>
-<br>
-<mat-form-field floatLabel="auto" hideRequiredMarker appearance="fill" color="accent"> 
-    <mat-label>Name</mat-label>
-    <input matInput required>
-    <mat-hint align="end"> Min 5 characters</mat-hint>
-</mat-form-field>
-<br>
-<mat-form-field floatLabel="auto" hideRequiredMarker appearance="outline" color="warn"> 
-    <mat-label>Name</mat-label>
-    <input matInput required>
-    <mat-hint align="end"> Min 5 characters</mat-hint>
-</mat-form-field>
+Value: {{selectedValue}}
+
+
