--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,23 @@
-<mat-form-field class="center"> 
-    <mat-label>Topic</mat-label>
-    <mat-select [(value)]="selectedValue"><!--can be multiple choices with multiple keyword-->
-        <mat-option>None</mat-option>
-        <mat-optgroup label="Web">
-            <mat-option value="angular">Angular</mat-option>
-            <mat-option value="react">React</mat-option>
-            <mat-option value="vue">Vue</mat-option>
-        </mat-optgroup>
-        <mat-optgroup label="Mobile">
-            <mat-option value="ionic">Ionic</mat-option>
-            <mat-option value="reactnative">React Native</mat-option>
-        </mat-optgroup>
-    </mat-select>
-</mat-form-field>
-Value: {{selectedValue}}
+<form>
+    <mat-form-field>
+        <input type="text" matInput [matAutocomplete]="auto" />
+        <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let option of options" [value]="option">
+                {{option}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+</form>
+
+<form>
+    <mat-form-field>
+        <input type="text" matInput [matAutocomplete]="auto2" [formControl]="myControl"/>
+        <mat-autocomplete #auto2="matAutocomplete" [displayWith]="displayFn">
+            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                {{option}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+</form>
 
 
