--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,21 @@
-<form>
-    <mat-form-field>
-        <input type="text" matInput [matAutocomplete]="auto" />
-        <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let option of options" [value]="option">
-                {{option}}
-            </mat-option>
-        </mat-autocomplete>
-    </mat-form-field>
-</form>
+<mat-checkbox>
+    Subscribe
+</mat-checkbox>
+<br>
+<mat-checkbox labelPosition="before">
+    Subscribe
+</mat-checkbox>
+<br>
+<mat-checkbox color="primary">
+    Subscribe
+</mat-checkbox>
+<br>
+<mat-checkbox color="warn">
+    Subscribe
+</mat-checkbox>
 
-<form>
-    <mat-form-field>
-        <input type="text" matInput [matAutocomplete]="auto2" [formControl]="myControl"/>
-        <mat-autocomplete #auto2="matAutocomplete" [displayWith]="displayFn">
-            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                {{option}}
-            </mat-option>
-        </mat-autocomplete>
-    </mat-form-field>
-</form>
-
-
+<mat-radio-group>
+    <mat-radio-button value="angular" color="primary">Angular</mat-radio-button>
+    <mat-radio-button value="react">React</mat-radio-button>
+    <mat-radio-button value="vue" color="warn">Vue</mat-radio-button>
+</mat-radio-group>
