--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,23 @@
-<mat-checkbox>
-    Subscribe
-</mat-checkbox>
-<br>
-<mat-checkbox labelPosition="before">
-    Subscribe
-</mat-checkbox>
-<br>
-<mat-checkbox color="primary">
-    Subscribe
-</mat-checkbox>
-<br>
-<mat-checkbox color="warn">
-    Subscribe
-</mat-checkbox>
+<mat-form-field>
+    <input matInput [matDatepicker]="myDatePicker">
+    <mat-datepicker-toggle [for]="myDatePicker" matSuffix></mat-datepicker-toggle>
+    <mat-datepicker #myDatePicker></mat-datepicker>
+</mat-form-field>
 
-<mat-radio-group>
-    <mat-radio-button value="angular" color="primary">Angular</mat-radio-button>
-    <mat-radio-button value="react">React</mat-radio-button>
-    <mat-radio-button value="vue" color="warn">Vue</mat-radio-button>
-</mat-radio-group>
+<mat-form-field>
+    <input matInput [matDatepicker]="myDatePicker2">
+    <mat-datepicker-toggle [for]="myDatePicker2" matSuffix></mat-datepicker-toggle>
+    <mat-datepicker #myDatePicker2 startView="year"></mat-datepicker>
+</mat-form-field>
+
+<mat-form-field>
+    <input matInput [matDatepicker]="myDatePicker3" >
+    <mat-datepicker-toggle [for]="myDatePicker3" matSuffix></mat-datepicker-toggle>
+    <mat-datepicker #myDatePicker3 startView="multi-year"></mat-datepicker>
+</mat-form-field>
+
+<mat-form-field>
+    <input matInput [matDatepicker]="myDatePicker4" [min]="minDate" [max]="maxDate" [matDatepickerFilter]="dateFilter">
+    <mat-datepicker-toggle [for]="myDatePicker4" matSuffix></mat-datepicker-toggle>
+    <mat-datepicker #myDatePicker4></mat-datepicker>
+</mat-form-field>
