--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,34 @@
-<mat-form-field>
-    <input matInput [matDatepicker]="myDatePicker">
-    <mat-datepicker-toggle [for]="myDatePicker" matSuffix></mat-datepicker-toggle>
-    <mat-datepicker #myDatePicker></mat-datepicker>
-</mat-form-field>
+<button 
+    mat-raised-button 
+    matTooltip="Welcome" 
+    class="center"
+> 
+    HELLO 
+</button>
+<button 
+    mat-raised-button 
+    matTooltip="Delayed tooltip" 
+    class="center"
+    matTooltipPosition="above"
+    matTooltipShowDelay="600"
+    matTooltipHideDelay="600"
+> 
+    DELAY
+</button>
+<button 
+    mat-raised-button 
+    matTooltip="Welcome" 
+    class="center"
+    matTooltipPosition="after"
+> 
+    HELLO 
+</button>
+<button 
+    mat-raised-button 
+    matTooltip="Welcome" 
+    class="center"
+    matTooltipPosition="before"
+> 
+    HELLO 
+</button>
 
-<mat-form-field>
-    <input matInput [matDatepicker]="myDatePicker2">
-    <mat-datepicker-toggle [for]="myDatePicker2" matSuffix></mat-datepicker-toggle>
-    <mat-datepicker #myDatePicker2 startView="year"></mat-datepicker>
-</mat-form-field>
-
-<mat-form-field>
-    <input matInput [matDatepicker]="myDatePicker3" >
-    <mat-datepicker-toggle [for]="myDatePicker3" matSuffix></mat-datepicker-toggle>
-    <mat-datepicker #myDatePicker3 startView="multi-year"></mat-datepicker>
-</mat-form-field>
-
-<mat-form-field>
-    <input matInput [matDatepicker]="myDatePicker4" [min]="minDate" [max]="maxDate" [matDatepickerFilter]="dateFilter">
-    <mat-datepicker-toggle [for]="myDatePicker4" matSuffix></mat-datepicker-toggle>
-    <mat-datepicker #myDatePicker4></mat-datepicker>
-</mat-form-field>
