--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,7 @@
-<button 
-    mat-raised-button 
-    matTooltip="Welcome" 
-    class="center"
-> 
-    HELLO 
-</button>
-<button 
-    mat-raised-button 
-    matTooltip="Delayed tooltip" 
-    class="center"
-    matTooltipPosition="above"
-    matTooltipShowDelay="600"
-    matTooltipHideDelay="600"
-> 
-    DELAY
-</button>
-<button 
-    mat-raised-button 
-    matTooltip="Welcome" 
-    class="center"
-    matTooltipPosition="after"
-> 
-    HELLO 
-</button>
-<button 
-    mat-raised-button 
-    matTooltip="Welcome" 
-    class="center"
-    matTooltipPosition="before"
-> 
-    HELLO 
+<button mat-button (click)="openSnackBar('Item deleted', 'Undo')">
+    Delete
 </button>
 
+<button mat-button (click)="openCustomSnackBar()">
+    Show custom snackbar
+</button>
