--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,6 @@
       <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
     </ng-container>
   
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    <mat-header-row *matHeaderRowDef="displayedColumnsData"></mat-header-row>
+    <mat-row (click)="logData(row)"*matRowDef="let row; columns: displayedColumnsData;"></mat-row>
   </mat-table>
