--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<mat-form-field>
+    <input (keyup)="applyFilter($event.target.value)" matInput placeholder="filter">
+</mat-form-field>
+
 <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- Position Column -->
     <ng-container matColumnDef="position">
@@ -23,6 +27,6 @@
       <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
     </ng-container>
   
-    <mat-header-row *matHeaderRowDef="displayedColumnsData"></mat-header-row>
-    <mat-row (click)="logData(row)"*matRowDef="let row; columns: displayedColumnsData;"></mat-row>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row (click)="logData(row)"*matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
