--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-form-field>
     <input (keyup)="applyFilter($event.target.value)" matInput placeholder="filter">
 </mat-form-field>
-
-<mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<div class="mat-elevation-z8">
+<mat-table [dataSource]="dataSource" matSort >
     <!-- Position Column -->
     <ng-container matColumnDef="position">
       <mat-header-cell mat-sort-header *matHeaderCellDef> No. </mat-header-cell>
@@ -30,3 +30,5 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row (click)="logData(row)"*matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
