--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,4 +29,15 @@ mat-grid-tile{
 table {
     width: 100%;
 }
+.number {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid maroon;
+    box-sizing: border-box;
+    height: 100px;
+}
+.container {
+    height: 400px;
+}
   
