--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,27 @@
+<!--
 <mat-form-field>
     <input (keyup)="applyFilter($event.target.value)" matInput placeholder="filter">
 </mat-form-field>
 <div class="mat-elevation-z8">
 <mat-table [dataSource]="dataSource" matSort >
-    <!-- Position Column -->
+    
     <ng-container matColumnDef="position">
       <mat-header-cell mat-sort-header *matHeaderCellDef> No. </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
     </ng-container>
   
-    <!-- Name Column -->
+    
     <ng-container matColumnDef="name">
       <mat-header-cell mat-sort-header *matHeaderCellDef> Name </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
     </ng-container>
   
-    <!-- Weight Column -->
+   
     <ng-container matColumnDef="weight">
       <mat-header-cell mat-sort-header *matHeaderCellDef> Weight </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
     </ng-container>
   
-    <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <mat-header-cell mat-sort-header *matHeaderCellDef> Symbol </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
@@ -32,3 +32,10 @@
   </mat-table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
+-->
+
+<cdk-virtual-scroll-viewport itemSize="100" class="container">
+    <div *cdkVirtualFor="let number of numbers" class="number">
+        {{number}}
+    </div>
+</cdk-virtual-scroll-viewport>
